@@ -1,3 +1,13 @@
+2010-11-04  Miguel de Dios  <miguel.dedios@artica.es>
+	
+	* extensions/system_info.php: change the funcionality of extension, now
+	generate a zip file in Pandora Console mode, and fixed the execution in the
+	term, and move to setup menu.
+	
+	Fixes: #3102834
+	
+	* include/config_process.php: cleaned source code style.
+
 2010-11-04  Raul Mateos <raulofpandora@gmail.com>
 
 	* general/login_page.php: Fixed validation for XHTML 1.0 Transitional.
